test/neg/neg-memberof5.errc
upcxx_memberof_general may not be used on fields with reference type or on array elements
